# zoom

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/barneshut/: cartesian3.rs  mod.rs
src/particle/: basic_particle.rs  mod.rs
src/tree/: cartesian3.rs  mod.rs
src/vector/: cartesian1.rs  cartesian2.rs  cartesian3.rs  mod.rs  space.rs
tests/: lib.rs
