[package]
name = "zoom"
version = "1.2.1"
description = "A particle physics library with extensive generics"
documentation = "https://vadixidav.github.io/zoom/zoom/"
repository = "https://github.com/vadixidav/zoom"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
keywords = ["physics", "particle", "simulation"]
license = "BSD-2-Clause"

[dependencies]
num = "0.1.30"
nalgebra = "0.5.1"
